# supertrainer

./: .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  ID_Semeval.txt  LICENSE  Makefile  README.md  dev_prediction.txt  environment.yaml  environment_bert.yaml  environment_unsloth.yaml  pyproject.toml
configs/: configs2.yaml  train.yaml  wandb.yaml
configs/dataset/: preskripsi_bert_manual.yaml  preskripsi_manual.yaml
configs/evaluation/: arabicbert_factcheck.yaml  gemma2_outlines_factcheck.yaml  gpt_instructor_factcheck.yaml  indobertuncased_factcheck.yaml  llama32_outlines_factcheck.yaml  mbertuncased_factcheck.yaml  mistral03_outlines_factcheck.yaml  qwen25_outlines_factcheck.yaml  sonnet_instructor_factcheck.yaml  xlmr_factcheck.yaml
configs/experiment/: train_bert.yaml  train_llm.yaml  train_longformer.yaml  train_mllm.yaml
configs/inference/: arabicbert_factcheck.yaml  gemma2_factcheck.yaml  gemma2_outlines_factcheck.yaml  gpt_factcheck.yaml  gpt_instructor_factcheck.yaml  indobertuncased_factcheck.yaml  llama32_factcheck.yaml  llama32_outlines_factcheck.yaml  mbertuncased_factcheck.yaml  mistral03_factcheck.yaml  mistral03_outlines_factcheck.yaml  qwen25_factcheck.yaml  qwen25_outlines_factcheck.yaml  sonnet_factcheck.yaml  sonnet_instructor_factcheck.yaml  xlmr_factcheck.yaml
configs/mode/: sanity_check.yaml
configs/trainer/: hf_trainer_kwargs.yaml
configs/training/: train_bert.yaml  train_llm.yaml  train_longformer.yaml
notebooks/: combine_results.ipynb  early_fusion.ipynb  example_data.jsonl  example_ideafics.ipynb  example_inference.ipynb  example_notebooks.ipynb  explore_notebooks.ipynb  research_longformer.ipynb  transform_factcheck.ipynb
notebooks/ai701/: cnn.ipynb  format_dataset.ipynb  most_common_material.ipynb  swift_inference.ipynb
results/bert_with_lora/: config.json  metrics.json
results/bert_without_lora/: config.json
results/bert_without_lora_weighted/: config.json  metrics.json  results.json
scripts/: evaluate_factchecking.sh  export_conda_env.sh  install_conda_env.sh  run_evaluate_bert.sh  run_evaluate_llm.sh  run_train.sh  run_train_bert.sh  run_train_llm.sh
scripts/ai701/: Motor_Control.ino  (+4 more)
tests/: test_helpers.py  test_model.py  utilities.py  utils.py
(+583 files in other folders)
